[gd_scene load_steps=6 format=3 uid="uid://do0qm4axm06ri"]

[ext_resource type="Script" path="res://config.gd" id="1_ot30r"]
[ext_resource type="Script" path="res://picker.gd" id="1_ssm8c"]
[ext_resource type="Script" path="res://app.gd" id="1_vvtvk"]
[ext_resource type="Script" path="res://engagement.gd" id="4_lhrxb"]
[ext_resource type="Script" path="res://openMenu.gd" id="5_rcv7n"]

[node name="PickerCanvasGroup" type="CanvasGroup" node_paths=PackedStringArray("configWindow", "pickerPanel")]
position = Vector2(112, 112)
script = ExtResource("1_vvtvk")
configWindow = NodePath("ConfigWindow")
pickerPanel = NodePath("PickerWindow")

[node name="ConfigWindow" type="Panel" parent="." node_paths=PackedStringArray("textEditor", "title", "subtitle", "list", "pickList", "deleteButton", "exitButton", "timer", "configPanel", "pickerPanel")]
visible = false
offset_right = 250.0
offset_bottom = 300.0
script = ExtResource("1_ot30r")
textEditor = NodePath("TextEdit")
title = NodePath("TitleLabel")
subtitle = NodePath("TitleLabel2")
list = NodePath("StudentList")
pickList = NodePath("../PickerWindow/StudentList")
deleteButton = NodePath("DeleteStudentButton")
exitButton = NodePath("ExitButton")
timer = NodePath("TextEdit/isReadyTimer")
configPanel = NodePath(".")
pickerPanel = NodePath("../PickerWindow")

[node name="TextEdit" type="TextEdit" parent="ConfigWindow"]
layout_mode = 0
offset_left = 10.0
offset_top = 27.0
offset_right = 223.0
offset_bottom = 117.0
tooltip_text = "Insert student names below separated by a comma"

[node name="isReadyTimer" type="Timer" parent="ConfigWindow/TextEdit"]
wait_time = 0.193
one_shot = true

[node name="TitleLabel" type="RichTextLabel" parent="ConfigWindow"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 248.0
offset_bottom = 42.0
tooltip_text = "Insert student names below and hit enter (or comma)"
text = "Add Students"

[node name="TitleLabel2" type="RichTextLabel" parent="ConfigWindow"]
layout_mode = 0
offset_left = 11.0
offset_top = 119.0
offset_right = 249.0
offset_bottom = 159.0
tooltip_text = "Insert student names below separated by a comma"
text = "Students already added:"

[node name="StudentList" type="ItemList" parent="ConfigWindow" groups=["Persist"]]
layout_mode = 0
offset_left = 14.0
offset_top = 146.0
offset_right = 218.0
offset_bottom = 225.0

[node name="DeleteStudentButton" type="Button" parent="ConfigWindow"]
layout_mode = 0
offset_left = 60.0
offset_top = 233.0
offset_right = 184.0
offset_bottom = 264.0
text = "Delete Student"

[node name="ExitButton" type="Button" parent="ConfigWindow"]
layout_mode = 0
offset_left = 59.0
offset_top = 264.0
offset_right = 183.0
offset_bottom = 295.0
text = "Exit Config"

[node name="PickerWindow" type="Panel" parent="." node_paths=PackedStringArray("list")]
offset_right = 250.0
offset_bottom = 352.0
script = ExtResource("1_ssm8c")
list = NodePath("StudentList")

[node name="TitleLabel" type="RichTextLabel" parent="PickerWindow"]
layout_mode = 0
offset_left = 9.0
offset_right = 249.0
offset_bottom = 40.0
tooltip_text = "Insert student names below separated by a comma"
text = "Picker"

[node name="StudentList" type="ItemList" parent="PickerWindow" groups=["Persist"]]
layout_mode = 0
offset_left = 14.0
offset_top = 30.0
offset_right = 218.0
offset_bottom = 185.0

[node name="PickButton" type="Button" parent="PickerWindow"]
layout_mode = 0
offset_left = 60.0
offset_top = 194.0
offset_right = 184.0
offset_bottom = 225.0
text = "Pick"

[node name="ConfigButton" type="Button" parent="PickerWindow"]
layout_mode = 0
offset_left = 60.0
offset_top = 229.0
offset_right = 184.0
offset_bottom = 260.0
text = "Configure"

[node name="SaveClassButton" type="Button" parent="PickerWindow"]
layout_mode = 0
offset_left = 60.0
offset_top = 263.0
offset_right = 184.0
offset_bottom = 294.0
text = "Save Class"

[node name="ExitButton" type="Button" parent="PickerWindow"]
layout_mode = 0
offset_left = 45.0
offset_top = 304.0
offset_right = 195.0
offset_bottom = 335.0
text = "Exit Application"

[node name="EngagementWindow" type="Panel" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_lhrxb")

[node name="openMenu" type="PopupMenu" parent="."]
size = Vector2i(250, 300)
script = ExtResource("5_rcv7n")

[node name="LoadLabel" type="RichTextLabel" parent="openMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = 10.0
offset_right = 165.0
offset_bottom = 148.0
grow_horizontal = 2
text = "Load previous class?"
autowrap_mode = 0

[node name="ClassLists" type="ItemList" parent="openMenu" groups=["Persist"]]
offset_left = 10.0
offset_top = 40.0
offset_right = 240.0
offset_bottom = 80.0

[connection signal="item_selected" from="ConfigWindow/StudentList" to="ConfigWindow" method="_on_student_list_item_selected"]
[connection signal="pressed" from="ConfigWindow/DeleteStudentButton" to="ConfigWindow" method="_on_delete_student_button_pressed"]
[connection signal="pressed" from="ConfigWindow/ExitButton" to="ConfigWindow" method="_on_exit_button_pressed"]
[connection signal="item_selected" from="PickerWindow/StudentList" to="PickerWindow" method="_on_student_list_item_selected"]
[connection signal="pressed" from="PickerWindow/PickButton" to="PickerWindow" method="_on_pick_button_pressed"]
[connection signal="pressed" from="PickerWindow/ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="PickerWindow/SaveClassButton" to="." method="_on_save_class_button_pressed"]
[connection signal="pressed" from="PickerWindow/ExitButton" to="." method="_on_exit_button_pressed"]
